--- a/config.toml
+++ b/config.toml
@@ -20,11 +20,11 @@ disqusShortname = "flickdm"
     keywords = "blogger,developer,hacker"
     info = "Full Stack Software Developer"
     avatarurl = "images/flickdm_avatar.jpg"
-    footercontent = "Enter a text here."
+    #footercontent = "Enter a text here."
 
     dateformat = "November 11, 2018"
 
-    hideCredits = true
+    hideCredits = false
     hideCopyright = false
 
     # Git Commit in Footer, uncomment the line below to enable it.
@@ -77,50 +77,7 @@ disqusShortname = "flickdm"
     weight = 3
     url = "/projects/"
 [[menu.main]]
-    name = "Resume"
-    weight = 4
-    url = "/resume/"
-[[menu.main]]
     name = "Contact me"
-    weight = 5
+    weight = 4
     url = "/contact/"
-
-[languages]
-    [languages.en]
-        languagename = "English" # The language name to be displayed in the selector.
-        title = "Flickdm"
-
-        # You can configure the theme parameter for each language.
-        [languages.en.params]
-        author = "Doug Flick"
-        info = "Full Stack Software Developer"
-        description = "Doug Flick's personal website"
-        keywords = "blogger,developer,hacker"
-
-        [languages.en.menu] # It is possible to change the menu too.
-
-        [[languages.en.menu.main]]
-        name = "About"
-        weight = 1.0
-        url = "/about/"
-
-        [[languages.en.menu.main]]
-        name = "Blog"
-        weight = 2.0
-        url = "/posts/"
-
-        [[languages.en.menu.main]]
-        name = "Projects"
-        weight = 3
-        url = "/projects/"
-
-        [[languages.en.menu.main]]
-        name = "Resume"
-        weight = 4
-        url = "/resume/"
-
-        [[languages.en.menu.main]]
-        name = "Contact me"
-        weight = 5
-        url = "/contact/"
 
